--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,10 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
+  padding: 0 1rem 1rem 1rem;
+  max-width: 680px;
+  margin: 0 auto;
+  background: #fff;
+  color: #333;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -9,8 +12,22 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  font-weight: 500;
 }
 
 * {
   box-sizing: border-box;
+}
+
+hr {
+  border: 1px solid #ddd;
+}
+
+iframe {
+  background: #ccc;
+  border: 1px solid #ccc;
+  height: 10rem;
+  width: 100%;
+  border-radius: 0.5rem;
+  filter: invert(1);
 }
