--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,7 +12,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
@@ -48,6 +47,7 @@
 
 .title {
   margin: 0;
+  padding: 1em;
   line-height: 1.15;
   font-size: 3rem;
 }
